added some routes and sent json

--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/jnware7/Pizza-Restaurant-Relational-DB-Schema-with-CRUD-API/issues"
   },
-  "homepage": "https://github.com/jnware7/Pizza-Restaurant-Relational-DB-Schema-with-CRUD-API#readme"
+  "homepage": "https://github.com/jnware7/Pizza-Restaurant-Relational-DB-Schema-with-CRUD-API#readme",
+  "dependencies": {
+    "express": "^4.15.3",
+    "pg-promise": "^6.1.1"
+  }
 }
